--- a/src/main/resources/export.properties
+++ b/src/main/resources/export.properties
@@ -1,3 +1,3 @@
-project.importType=class
-project.workspace=E:/eclipse-workspace
-project.target=G:/CLASS/TEST-2018-09-17-01-java
+project.importType=java
+project.workspace=D:/Eclipse/WorkSpace
+project.target=G:/CLASS/shopservice-2018-10-26-3
