--- a/src/main/resources/export.properties
+++ b/src/main/resources/export.properties
@@ -1,3 +1,3 @@
-project.importType=java
-project.workspace=D:\\Eclipse\\WorkSpace
-project.target=G:/CLASS/shopservice-2018-10-26-3
+project.importType=class
+project.workspace=D:\\idea_workspace\\huitu_smart_screen\\
+project.target=E:/CLASS/class-20191122
