--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>guava</artifactId>
 			<version>26.0-jre</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.0.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
