--- a/src/main/resources/export.properties
+++ b/src/main/resources/export.properties
@@ -1,3 +1,3 @@
 project.importType=class
-project.workspace=D:\\idea_workspace\\huitu_smart_screen\\
-project.target=E:/CLASS/class-20191122
+project.workspace=D:\\idea_workspace\\platform\\
+project.target=E:/CLASS/class-20200305-01
